--- a/app/src/main/res/layout/content_add_transaction.xml
+++ b/app/src/main/res/layout/content_add_transaction.xml
@@ -43,8 +43,7 @@
             android:id="@+id/txtNewTransactionDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="date"
-            android:onClick="txtDateOnClick" />
+            android:inputType="date" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -60,6 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tilNewTransactionDate">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txtNewTransactionDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -74,6 +74,19 @@
         android:onClick="btnNewTransactionCameraOnClick"
         android:text="Camera"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnAddTransaction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:onClick="btnAddTransactionOnClick"
+        android:text="Add"
+        app:layout_constraintBottom_toTopOf="@+id/btnNewTransactionCamera"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
